--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,10 @@
 $color-bg: #000;
 $color-text: #fff;
 $color-primary: #e60000;
+$color-page: #fff;
+$color-muted: #f7f7f7;
+$color-border: rgba(0, 0, 0, 0.08);
+$color-subtle: #777;
 
 // Dimensions
 $header-height: 70px;
