--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -1,12 +1,17 @@
 @use "../_variables" as *;
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: $color-bg;
   padding: 0 2rem;
-  height: 70px;
+  height: $header-height;
 
   &__logo {
     display: flex;
