modified:   index.html deleted:    src/assets/font/Roboto/Roboto-Regular.ttf modified:   src/components/charts/ActivityChart.jsx modified:   src/components/charts/AverageSessionsChart.jsx modified:   src/components/charts/PerformanceRadar.jsx modified:   src/pages/Dashboard.jsx modified:   src/services/mockData.json modified:   src/styles/_fonts.scss modified:   src/styles/components/Header.scss modified:   src/styles/components/StatCard.scss modified:   src/styles/components/charts/ActivityChart.scss modified:   src/styles/components/charts/AverageSessionsChart.scss modified:   src/styles/components/charts/PerformanceRadar.scss modified:   src/styles/components/charts/ScoreGauge.scss modified:   src/styles/pages/Dashboard.scss

--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: $color-bg;
+  background: $color-bg;
   padding: 0 2rem;
   height: $header-height;
 
