--- a/src/styles/components/charts/ActivityChart.scss
+++ b/src/styles/components/charts/ActivityChart.scss
@@ -4,7 +4,7 @@
   height: 250px;
 
   &__tooltip {
-    background-color: #e60000;
+    background: #e60000;
     color: white;
     padding: 10px 8px;
     font-size: 10px;
