--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,7 +1,6 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../assets/font/Roboto/Roboto-Regular.ttf")
-    format("truetype");
+  src: url("../assets/font/Roboto/Roboto-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
