--- a/src/styles/components/charts/ScoreGauge.scss
+++ b/src/styles/components/charts/ScoreGauge.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: #fbfbfb;
+  background: #fbfbfb;
   border-radius: 5px;
   display: flex;
   justify-content: center;
