--- a/src/styles/pages/Dashboard.scss
+++ b/src/styles/pages/Dashboard.scss
@@ -34,7 +34,7 @@
 
   .card {
     background: #fff;
-    border-radius: $radius-lg;
+    border-radius: $radius-md;
     box-shadow: $shadow;
     padding: 1rem 1rem 1.2rem;
     border: 1px solid $color-border;
@@ -119,7 +119,6 @@
       color: #9aa1a6;
       font-size: 0.9rem;
       line-height: 1.1;
-
     }
   }
 
