--- a/src/styles/components/charts/ScoreGauge.scss
+++ b/src/styles/components/charts/ScoreGauge.scss
@@ -7,17 +7,30 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 32px 0;
+
+  &__title {
+    position: absolute;
+    top: 2px;
+    left: 25px;
+    color: #20253a;
+    font-size: 20px;
+    font-weight: 500;
+    width: 150px;
+    line-height: 1.2;
+    z-index: 3;
+  }
 
   &__chart {
     position: relative;
     width: 100%;
     height: 100%;
+    
   }
 
   &__center {
     position: absolute;
     text-align: center;
-    line-height: 1.2;
 
     strong {
       display: block;
@@ -28,6 +41,7 @@
     span {
       font-size: 0.8rem;
       color: #74798c;
+      margin-top: -50px;
     }
   }
 }
