modified:   src/components/StatCard.jsx modified:   src/components/charts/ActivityChart.jsx modified:   src/components/charts/PerformanceRadar.jsx modified:   src/pages/Dashboard.jsx modified:   src/styles/components/Header.scss modified:   src/styles/components/StatCard.scss modified:   src/styles/components/charts/ScoreGauge.scss modified:   src/styles/pages/Dashboard.scss

--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -26,7 +26,7 @@
   &__nav {
     ul {
       display: flex;
-      gap: 3rem;
+      gap: 3rem 8rem;
       list-style: none;
       margin: 0;
       padding: 0;
@@ -38,6 +38,8 @@
         transition: transform 0.3s, background 0.3s, color 0.3s;
         border-radius: 5px;
         padding: 5px;
+        margin-right: 150px;
+        font-size: 25px;
 
         &:hover {
           background: $color-text;
