--- a/src/styles/components/charts/AverageSessionsChart.scss
+++ b/src/styles/components/charts/AverageSessionsChart.scss
@@ -4,7 +4,7 @@
   position: relative;
   width: 100%;
   height: 255px;
-  background-color: #ff0000;
+  background: #ff0000;
   border-radius: $radius-md;
   overflow: hidden;
   padding-top: 10px;
