--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -26,7 +26,7 @@
   &__nav {
     ul {
       display: flex;
-      gap: 3rem 8rem;
+      gap: 3rem;
       list-style: none;
       margin: 0;
       padding: 0;
