--- a/src/styles/components/Sidebar.scss
+++ b/src/styles/components/Sidebar.scss
@@ -27,7 +27,7 @@
     width: 56px;
     height: 56px;
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
     background: #fff;
     display: grid;
     place-items: center;
@@ -57,19 +57,19 @@
   }
 
   &__copyright {
-    height: 160px;
+    height: 120px;
     width: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: 20px;
     user-select: none;
     flex: 0 0 auto;
 
     span {
       color: $color-text;
       opacity: 0.8;
-      font-size: 0.75rem;
+      font-size: 0.7rem;
       letter-spacing: 0.3px;
       white-space: nowrap;
       display: inline-block;
